; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_dsl_bookmark.c_dsl_get_bookmark_props.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_dsl_bookmark.c_dsl_get_bookmark_props.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@FTAG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dsl_get_bookmark_props(i8* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca %struct.TYPE_4__, align 4
  %11 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  %12 = bitcast %struct.TYPE_4__* %10 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %12, i8 0, i64 4, i1 false)
  %13 = load i8*, i8** %5, align 8
  %14 = load i32, i32* @FTAG, align 4
  %15 = call i32 @dsl_pool_hold(i8* %13, i32 %14, i32** %8)
  store i32 %15, i32* %11, align 4
  %16 = load i32, i32* %11, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %3
  %19 = load i32, i32* %11, align 4
  store i32 %19, i32* %4, align 4
  br label %51

20:                                               ; preds = %3
  %21 = load i32*, i32** %8, align 8
  %22 = load i8*, i8** %5, align 8
  %23 = load i32, i32* @FTAG, align 4
  %24 = call i32 @dsl_dataset_hold(i32* %21, i8* %22, i32 %23, i32** %9)
  store i32 %24, i32* %11, align 4
  %25 = load i32, i32* %11, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %32

27:                                               ; preds = %20
  %28 = load i32*, i32** %8, align 8
  %29 = load i32, i32* @FTAG, align 4
  %30 = call i32 @dsl_pool_rele(i32* %28, i32 %29)
  %31 = load i32, i32* %11, align 4
  store i32 %31, i32* %4, align 4
  br label %51

32:                                               ; preds = %20
  %33 = load i32*, i32** %9, align 8
  %34 = load i8*, i8** %6, align 8
  %35 = call i32 @dsl_bookmark_lookup_impl(i32* %33, i8* %34, %struct.TYPE_4__* %10)
  store i32 %35, i32* %11, align 4
  %36 = load i32, i32* %11, align 4
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %38, label %39

38:                                               ; preds = %32
  br label %43

39:                                               ; preds = %32
  %40 = load i32*, i32** %8, align 8
  %41 = load i32*, i32** %7, align 8
  %42 = call i32 @dsl_bookmark_fetch_props(i32* %40, %struct.TYPE_4__* %10, i32* null, i32* %41)
  br label %43

43:                                               ; preds = %39, %38
  %44 = load i32*, i32** %9, align 8
  %45 = load i32, i32* @FTAG, align 4
  %46 = call i32 @dsl_dataset_rele(i32* %44, i32 %45)
  %47 = load i32*, i32** %8, align 8
  %48 = load i32, i32* @FTAG, align 4
  %49 = call i32 @dsl_pool_rele(i32* %47, i32 %48)
  %50 = load i32, i32* %11, align 4
  store i32 %50, i32* %4, align 4
  br label %51

51:                                               ; preds = %43, %27, %18
  %52 = load i32, i32* %4, align 4
  ret i32 %52
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @dsl_pool_hold(i8*, i32, i32**) #2

declare dso_local i32 @dsl_dataset_hold(i32*, i8*, i32, i32**) #2

declare dso_local i32 @dsl_pool_rele(i32*, i32) #2

declare dso_local i32 @dsl_bookmark_lookup_impl(i32*, i8*, %struct.TYPE_4__*) #2

declare dso_local i32 @dsl_bookmark_fetch_props(i32*, %struct.TYPE_4__*, i32*, i32*) #2

declare dso_local i32 @dsl_dataset_rele(i32*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
